welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: not found: value lookigFor
		if (nums(x)==lookigFor) {
                             ^